@@ -28,7 +28,6 @@
             <child>
               <object class="GtkLabel" id="takenon_label">
                 <property name="visible">True</property>
-                <property name="xalign">0</property>
                 <property name="xpad">5</property>
                 <property name="ellipsize">end</property>
               </object>
@@ -42,7 +41,7 @@
               <object class="GtkTable" id="table1">
                 <property name="visible">True</property>
                 <property name="border_width">5</property>
-                <property name="n_rows">6</property>
+                <property name="n_rows">7</property>
                 <property name="n_columns">2</property>
                 <property name="column_spacing">7</property>
                 <property name="row_spacing">5</property>
@@ -53,6 +52,9 @@
                     <property name="label" translatable="yes">&lt;b&gt;ISO speed:&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                   </object>
+                  <packing>
+                    <property name="x-options">GTK_FILL</property>
+                  </packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="iso_label">
@@ -74,6 +76,7 @@
                   <packing>
                     <property name="top_attach">1</property>
                     <property name="bottom_attach">2</property>
+                    <property name="x-options">GTK_FILL</property>
                   </packing>
                 </child>
                 <child>
@@ -98,6 +101,7 @@
                   <packing>
                     <property name="top_attach">2</property>
                     <property name="bottom_attach">3</property>
+                    <property name="x-options">GTK_FILL</property>
                   </packing>
                 </child>
                 <child>
@@ -122,12 +126,14 @@
                   <packing>
                     <property name="top_attach">3</property>
                     <property name="bottom_attach">4</property>
+                    <property name="x-options">GTK_FILL</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="focal_length_label">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
+                    <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -146,6 +152,7 @@
                   <packing>
                     <property name="top_attach">4</property>
                     <property name="bottom_attach">5</property>
+                    <property name="x-options">GTK_FILL</property>
                   </packing>
                 </child>
                 <child>
@@ -171,6 +178,7 @@
                   <packing>
                     <property name="top_attach">5</property>
                     <property name="bottom_attach">6</property>
+                    <property name="x-options">GTK_FILL</property>
                   </packing>
                 </child>
                 <child>
@@ -183,6 +191,33 @@
                     <property name="right_attach">2</property>
                     <property name="top_attach">5</property>
                     <property name="bottom_attach">6</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label7">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Description:&lt;/b&gt;</property>
+                    <property name="use_markup">True</property>
+                    <property name="yalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="top_attach">6</property>
+                    <property name="bottom_attach">7</property>
+                    <property name="x-options">GTK_FILL</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="desc_label">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">6</property>
+                    <property name="bottom_attach">7</property>
                   </packing>
                 </child>
               </object>
